edit swagger.yaml
